fix some erros in scroll on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -678,7 +678,7 @@ h2 {
   justify-content: center;
   align-items: center;
 margin-top: 30px;
-margin-bottom: 10vh;
+/* margin-bottom: ; */
 }
 
 #menuControls{
